# podfix

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  README.md  config.local.example.toml  config.local.toml  config.quicktest.toml  config.sample.toml  config.server.example.toml  config.server.toml  config.shared.toml  config.toml  podfix.sh  pyproject.toml  run-sync.sh
dev/: plan.md
src/podcast_proxy/: __init__.py  artwork.py  cli.py  config.py  feed.py  html.py  media.py  rss.py  service.py  state.py  utils.py
tests/: test_cli.py  test_feed.py  test_html.py  test_media.py  test_service.py
